infrastructure/clusters/dev/infrastructure/monitoring/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-tailscale
  namespace: telemetry-monitoring-dev
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: kube-prometheus-stack-alertmanager
      port:
        number: 9093
  tls:
    - hosts:
        - alertmanager-dev
